--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -14,7 +14,7 @@
   box-shadow: inset 0 0 5px black;
 }
 .input_box:focus {
-  box-shadow: 0 0 10px 1000px rgb(0, 0, 0, 0.5);
+  box-shadow: 0 0 100px 1000000px rgb(0, 0, 0, 0.5);
   outline: none;
 }
 .input_submit {
@@ -42,4 +42,31 @@
 .input_submit:active {
   transform: scale(0.8);
   box-shadow: 0 0 5px black;
+}
+.todos {
+  display: flex;
+  justify-content: space-evenly;
+  width: 90%;
+  flex-wrap: wrap;
+}
+.todos_single {
+  display: flex;
+  width: 29.5%;
+  border-radius: 5px;
+  padding: 20px;
+  margin-top: 15px;
+  background-image: url("https://images.unsplash.com/photo-1571456653714-a8db063a3e91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+  width: 350px;
+}
+
+.todo__single--text {
+  flex: 1;
+  padding: 5px;
+  border: none;
+  font-size: 20px;
+}
+.icons {
+  margin-left: 5px;
+  font-size: 25px;
+  cursor: pointer;
 }
