--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -43,33 +43,98 @@
   transform: scale(0.8);
   box-shadow: 0 0 5px black;
 }
-.todos {
+.container {
+  width: 95%;
   display: flex;
-  justify-content: space-evenly;
-  width: 90%;
-  flex-wrap: wrap;
+  margin-top: 10px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.todos {
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  width: 47.5%;
+  padding: 15px;
+  background-color: rgb(50, 195, 205);
+}
+.dragactive {
+  background-color: rgb(0, 221, 236);
+}
+
+.dragcomplete {
+  background-color: rgb(255, 38, 0);
+}
+
+.remove {
+  background-color: rgb(235, 103, 80);
+}
+
+.todos__heading {
+  font-size: 30px;
+  /* text-align: center; */
+  color: white;
 }
 .todos_single {
   display: flex;
-  width: 29.5%;
+  justify-content: space-between;
+  width: 99%;
+}
+.all-icons {
+  margin-right: auto;
+}
+.todos__single {
+  display: flex;
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
-  background-image: url("https://images.unsplash.com/photo-1571456653714-a8db063a3e91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-  width: 350px;
+  background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+  transition: 0.2s;
 }
 
-.todo__single--text {
+.drag {
+  box-shadow: 0 0 20px black;
+}
+
+.todos__single:hover {
+  box-shadow: 0 0 5px black;
+  transform: scale(1.03);
+}
+
+.todos__single--text {
   flex: 1;
   padding: 5px;
   border: none;
   font-size: 20px;
 }
+
+.todos__single--text:focus {
+  outline: none;
+}
+
 .icons {
-  margin-left: 5px;
+  margin-left: 10px;
   font-size: 25px;
   cursor: pointer;
+  position: relative;
 }
-.todos__single--test:active {
-  background-color: yellow;
+
+@media (max-width: 1100px) {
+  .todos {
+    width: 45%;
+  }
+}
+
+@media (max-width: 700px) {
+  .input {
+    width: 95%;
+  }
+  .container {
+    width: 95%;
+    flex-direction: column;
+  }
+  .todos {
+    width: 95%;
+    margin-bottom: 10px;
+  }
 }
